typescript/checker/tests/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts.stderr
error: NoOverlap {
    span: Span {
        lo: BytePos(
            110,
        ),
        hi: BytePos(
            125,
        ),
        ctxt: #0,
    },
    value: false,
    left: Span {
        lo: BytePos(
            110,
        ),
        hi: BytePos(
            115,
        ),
        ctxt: #0,
    },
    right: Span {
        lo: BytePos(
            120,
        ),
        hi: BytePos(
            125,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts:8:5
  |
8 | b = "foo" === "bar";
  |     ^^^^^^^^^^^^^^^

error: NoOverlap {
    span: Span {
        lo: BytePos(
            132,
        ),
        hi: BytePos(
            143,
        ),
        ctxt: #0,
    },
    value: false,
    left: Span {
        lo: BytePos(
            132,
        ),
        hi: BytePos(
            137,
        ),
        ctxt: #0,
    },
    right: Span {
        lo: BytePos(
            142,
        ),
        hi: BytePos(
            143,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts:9:5
  |
9 | b = "bar" === x;
  |     ^^^^^^^^^^^

error: NoOverlap {
    span: Span {
        lo: BytePos(
            150,
        ),
        hi: BytePos(
            161,
        ),
        ctxt: #0,
    },
    value: false,
    left: Span {
        lo: BytePos(
            150,
        ),
        hi: BytePos(
            151,
        ),
        ctxt: #0,
    },
    right: Span {
        lo: BytePos(
            156,
        ),
        hi: BytePos(
            161,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts:10:5
   |
10 | b = x === "bar";
   |     ^^^^^^^^^^^

error: NoOverlap {
    span: Span {
        lo: BytePos(
            255,
        ),
        hi: BytePos(
            270,
        ),
        ctxt: #0,
    },
    value: true,
    left: Span {
        lo: BytePos(
            255,
        ),
        hi: BytePos(
            260,
        ),
        ctxt: #0,
    },
    right: Span {
        lo: BytePos(
            265,
        ),
        hi: BytePos(
            270,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts:17:5
   |
17 | b = "foo" !== "bar";
   |     ^^^^^^^^^^^^^^^

error: NoOverlap {
    span: Span {
        lo: BytePos(
            277,
        ),
        hi: BytePos(
            288,
        ),
        ctxt: #0,
    },
    value: true,
    left: Span {
        lo: BytePos(
            277,
        ),
        hi: BytePos(
            282,
        ),
        ctxt: #0,
    },
    right: Span {
        lo: BytePos(
            287,
        ),
        hi: BytePos(
            288,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts:18:5
   |
18 | b = "bar" !== x;
   |     ^^^^^^^^^^^

error: NoOverlap {
    span: Span {
        lo: BytePos(
            295,
        ),
        hi: BytePos(
            306,
        ),
        ctxt: #0,
    },
    value: true,
    left: Span {
        lo: BytePos(
            295,
        ),
        hi: BytePos(
            296,
        ),
        ctxt: #0,
    },
    right: Span {
        lo: BytePos(
            301,
        ),
        hi: BytePos(
            306,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts:19:5
   |
19 | b = x !== "bar";
   |     ^^^^^^^^^^^

